// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> AllRecommendedVariants story renders snapshot 1`] = `
<ul
  class="grid gap-y-8"
>
  <li>
    <h2
      class="headingBottomSpacing heading heading--size-h2"
    >
      Primary
    </h2>
    <ul>
      <li>
        <h3
          class="headingBottomSpacing heading heading--size-h3"
        >
          Size Large
        </h3>
        <ul
          class="grid gap-y-4"
        >
          <li>
            <a
              class="button sizeLarge variantFlat colorBrand"
            >
              Link
            </a>
          </li>
          <li>
            <a
              class="button sizeLarge variantFlat colorBrand"
            >
              <svg
                aria-hidden="true"
                class="icon arrowBackIcon"
                fill="currentColor"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="test-file-stub#arrow-back"
                />
              </svg>
               
              Link
            </a>
          </li>
          <li
            class="headingBottomSpacing"
          >
            <a
              class="button sizeLarge variantFlat colorBrand"
            >
              Link
              <svg
                aria-hidden="true"
                class="icon arrowForwardIcon"
                fill="currentColor"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="test-file-stub#arrow-forward"
                />
              </svg>
            </a>
          </li>
        </ul>
      </li>
      <li>
        <h3
          class="headingBottomSpacing heading heading--size-h3"
        >
          Size Medium
        </h3>
        <div
          class="headingBottomSpacing"
        >
          <a
            class="button sizeMedium variantFlat colorBrand"
          >
            Link
          </a>
        </div>
      </li>
      <li>
        <h3
          class="headingBottomSpacing heading heading--size-h3"
        >
          Size Small
        </h3>
        <div
          class="headingBottomSpacing"
        >
          <a
            class="button sizeSmall variantFlat colorBrand"
          >
            Link
          </a>
        </div>
      </li>
    </ul>
  </li>
  <li>
    <h2
      class="headingBottomSpacing heading heading--size-h2"
    >
      Secondary
    </h2>
    <ul>
      <li>
        <h3
          class="headingBottomSpacing heading heading--size-h3"
        >
          Size Large
        </h3>
        <ul
          class="grid gap-y-4"
        >
          <li>
            <a
              class="button sizeLarge variantOutline colorBrand"
            >
              Link
            </a>
          </li>
          <li>
            <a
              class="button sizeLarge variantOutline colorBrand"
            >
              <svg
                aria-hidden="true"
                class="icon arrowBackIcon"
                fill="currentColor"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="test-file-stub#arrow-back"
                />
              </svg>
               
              Link
            </a>
          </li>
          <li
            class="headingBottomSpacing"
          >
            <a
              class="button sizeLarge variantOutline colorBrand"
            >
              Link
              <svg
                aria-hidden="true"
                class="icon arrowForwardIcon"
                fill="currentColor"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="test-file-stub#arrow-forward"
                />
              </svg>
            </a>
          </li>
        </ul>
      </li>
      <li>
        <h3
          class="headingBottomSpacing heading heading--size-h3"
        >
          Size Medium
        </h3>
        <div
          class="headingBottomSpacing"
        >
          <a
            class="button sizeMedium variantOutline colorBrand"
          >
            Link
          </a>
        </div>
      </li>
      <li>
        <h3
          class="headingBottomSpacing heading heading--size-h3"
        >
          Size Small
        </h3>
        <div
          class="headingBottomSpacing"
        >
          <a
            class="button sizeSmall variantOutline colorBrand"
          >
            Link
          </a>
        </div>
      </li>
    </ul>
  </li>
  <li>
    <h2
      class="headingBottomSpacing heading heading--size-h2"
    >
      Tertiary
    </h2>
    <ul>
      <li>
        <h3
          class="headingBottomSpacing heading heading--size-h3"
        >
          Size Large
        </h3>
        <ul
          class="grid gap-y-4"
        >
          <li>
            <a
              class="button sizeLarge variantOutline colorNeutral"
            >
              Link
            </a>
          </li>
          <li>
            <a
              class="button sizeLarge variantOutline colorNeutral"
            >
              <svg
                aria-hidden="true"
                class="icon arrowBackIcon"
                fill="currentColor"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="test-file-stub#arrow-back"
                />
              </svg>
               
              Link
            </a>
          </li>
          <li
            class="headingBottomSpacing"
          >
            <a
              class="button sizeLarge variantOutline colorNeutral"
            >
              Link
              <svg
                aria-hidden="true"
                class="icon arrowForwardIcon"
                fill="currentColor"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="test-file-stub#arrow-forward"
                />
              </svg>
            </a>
          </li>
        </ul>
      </li>
      <li>
        <h3
          class="headingBottomSpacing heading heading--size-h3"
        >
          Size Medium
        </h3>
        <div
          class="headingBottomSpacing"
        >
          <a
            class="button sizeMedium variantOutline colorNeutral"
          >
            Link
          </a>
        </div>
      </li>
      <li>
        <h3
          class="headingBottomSpacing heading heading--size-h3"
        >
          Size Small
        </h3>
        <div
          class="headingBottomSpacing"
        >
          <a
            class="button sizeSmall variantOutline colorNeutral"
          >
            Link
          </a>
        </div>
      </li>
    </ul>
  </li>
  <li>
    <h2
      class="headingBottomSpacing heading heading--size-h2"
    >
      Plain
    </h2>
    <ul>
      <li>
        <h3
          class="headingBottomSpacing heading heading--size-h3"
        >
          Size Large
        </h3>
        <ul
          class="grid gap-y-4"
        >
          <li>
            <a
              class="button sizeLarge variantPlain colorBrand"
            >
              <svg
                aria-hidden="true"
                class="icon arrowBackIcon"
                fill="currentColor"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="test-file-stub#arrow-back"
                />
              </svg>
               
              Link
            </a>
          </li>
          <li>
            <a
              class="button sizeLarge variantPlain colorBrand"
            >
              Link
              <svg
                aria-hidden="true"
                class="icon arrowForwardIcon"
                fill="currentColor"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="test-file-stub#arrow-forward"
                />
              </svg>
            </a>
          </li>
          <li
            class="headingBottomSpacing"
          >
            <a
              class="button sizeLarge variantPlain colorBrand"
            >
              <svg
                class="icon mx-[-0.4em]"
                fill="currentColor"
                role="img"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title
                  id="23"
                >
                  forward
                </title>
                <use
                  xlink:href="test-file-stub#arrow-forward"
                />
              </svg>
            </a>
          </li>
        </ul>
      </li>
      <li>
        <h3
          class="headingBottomSpacing heading heading--size-h3"
        >
          Size Medium
        </h3>
        <ul
          class="grid gap-y-4"
        >
          <li>
            <a
              class="button sizeMedium variantPlain colorBrand"
            >
              <svg
                aria-hidden="true"
                class="icon arrowBackIcon"
                fill="currentColor"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="test-file-stub#arrow-back"
                />
              </svg>
               
              Link
            </a>
          </li>
          <li>
            <a
              class="button sizeMedium variantPlain colorBrand"
            >
              Link
              <svg
                aria-hidden="true"
                class="icon arrowForwardIcon"
                fill="currentColor"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="test-file-stub#arrow-forward"
                />
              </svg>
            </a>
          </li>
          <li>
            <a
              class="button sizeMedium variantPlain colorBrand"
            >
              <svg
                class="icon mx-[-0.55em]"
                fill="currentColor"
                role="img"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title
                  id="26"
                >
                  add
                </title>
                <use
                  xlink:href="test-file-stub#add"
                />
              </svg>
            </a>
          </li>
        </ul>
      </li>
    </ul>
  </li>
  <li>
    <h2
      class="headingBottomSpacing heading heading--size-h2"
    >
      Link
    </h2>
    <ul
      class="grid gap-y-4"
    >
      <li>
        <a
          class="button variantLink colorBrand"
        >
          Link
        </a>
      </li>
      <li>
        <a
          class="button variantLink colorBrand"
        >
          Link
          <svg
            class="icon ml-1"
            fill="currentColor"
            role="img"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title
              id="27"
            >
              opens in a new tab
            </title>
            <use
              xlink:href="test-file-stub#open-in-new"
            />
          </svg>
        </a>
      </li>
    </ul>
  </li>
  <li>
    <h2
      class="headingBottomSpacing heading heading--size-h2"
    >
      Destructive
    </h2>
    <h3
      class="headingBottomSpacing heading heading--size-h3"
    >
      Size Large
    </h3>
    <ul
      class="grid gap-y-4"
    >
      <li>
        <a
          class="button sizeLarge variantFlat colorAlert"
        >
          Link
        </a>
      </li>
      <li>
        <a
          class="button sizeLarge variantFlat colorAlert"
        >
          <svg
            aria-hidden="true"
            class="icon arrowBackIcon"
            fill="currentColor"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#arrow-back"
            />
          </svg>
           
          Link
        </a>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`<Link /> Default story renders snapshot 1`] = `
<a
  class="button variantLink colorBrand"
  color="brand"
  href="https://go.czi.team/eds"
>
  Link
</a>
`;

exports[`<Link /> DestructiveRecommendedVariants story renders snapshot 1`] = `
<h3
  class="headingBottomSpacing heading heading--size-h3"
>
  Size Large
</h3>
`;

exports[`<Link /> LinkInBody story renders snapshot 1`] = `
<p
  class="text text--body"
>
  This text surrounds the 
  <a
    class="button variantLink colorBrand"
    color="brand"
    href="https://go.czi.team/eds"
  >
    Link
  </a>
   and shows that the link should adhere to its appearance
</p>
`;

exports[`<Link /> LinkInHeading story renders snapshot 1`] = `
<h1
  class="heading heading--size-h1"
>
  This text surrounds the 
  <a
    class="button variantLink colorBrand"
    color="brand"
    href="https://go.czi.team/eds"
  >
    Link
  </a>
   and shows that the link should adhere to its appearance
</h1>
`;

exports[`<Link /> LinkRecommendedVariants story renders snapshot 1`] = `
<ul
  class="grid gap-y-4"
>
  <li>
    <a
      class="button variantLink colorBrand"
    >
      Link
    </a>
  </li>
  <li>
    <a
      class="button variantLink colorBrand"
    >
      Link
      <svg
        class="icon ml-1"
        fill="currentColor"
        role="img"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="13"
        >
          opens in a new tab
        </title>
        <use
          xlink:href="test-file-stub#open-in-new"
        />
      </svg>
    </a>
  </li>
</ul>
`;

exports[`<Link /> PlainRecommendedVariants story renders snapshot 1`] = `
<ul>
  <li>
    <h3
      class="headingBottomSpacing heading heading--size-h3"
    >
      Size Large
    </h3>
    <ul
      class="grid gap-y-4"
    >
      <li>
        <a
          class="button sizeLarge variantPlain colorBrand"
        >
          <svg
            aria-hidden="true"
            class="icon arrowBackIcon"
            fill="currentColor"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#arrow-back"
            />
          </svg>
           
          Link
        </a>
      </li>
      <li>
        <a
          class="button sizeLarge variantPlain colorBrand"
        >
          Link
          <svg
            aria-hidden="true"
            class="icon arrowForwardIcon"
            fill="currentColor"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#arrow-forward"
            />
          </svg>
        </a>
      </li>
      <li
        class="headingBottomSpacing"
      >
        <a
          class="button sizeLarge variantPlain colorBrand"
        >
          <svg
            class="icon mx-[-0.4em]"
            fill="currentColor"
            role="img"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title
              id="9"
            >
              forward
            </title>
            <use
              xlink:href="test-file-stub#arrow-forward"
            />
          </svg>
        </a>
      </li>
    </ul>
  </li>
  <li>
    <h3
      class="headingBottomSpacing heading heading--size-h3"
    >
      Size Medium
    </h3>
    <ul
      class="grid gap-y-4"
    >
      <li>
        <a
          class="button sizeMedium variantPlain colorBrand"
        >
          <svg
            aria-hidden="true"
            class="icon arrowBackIcon"
            fill="currentColor"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#arrow-back"
            />
          </svg>
           
          Link
        </a>
      </li>
      <li>
        <a
          class="button sizeMedium variantPlain colorBrand"
        >
          Link
          <svg
            aria-hidden="true"
            class="icon arrowForwardIcon"
            fill="currentColor"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#arrow-forward"
            />
          </svg>
        </a>
      </li>
      <li>
        <a
          class="button sizeMedium variantPlain colorBrand"
        >
          <svg
            class="icon mx-[-0.55em]"
            fill="currentColor"
            role="img"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title
              id="12"
            >
              add
            </title>
            <use
              xlink:href="test-file-stub#add"
            />
          </svg>
        </a>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`<Link /> PrimaryRecommendedVariants story renders snapshot 1`] = `
<ul>
  <li>
    <h3
      class="headingBottomSpacing heading heading--size-h3"
    >
      Size Large
    </h3>
    <ul
      class="grid gap-y-4"
    >
      <li>
        <a
          class="button sizeLarge variantFlat colorBrand"
        >
          Link
        </a>
      </li>
      <li>
        <a
          class="button sizeLarge variantFlat colorBrand"
        >
          <svg
            aria-hidden="true"
            class="icon arrowBackIcon"
            fill="currentColor"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#arrow-back"
            />
          </svg>
           
          Link
        </a>
      </li>
      <li
        class="headingBottomSpacing"
      >
        <a
          class="button sizeLarge variantFlat colorBrand"
        >
          Link
          <svg
            aria-hidden="true"
            class="icon arrowForwardIcon"
            fill="currentColor"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#arrow-forward"
            />
          </svg>
        </a>
      </li>
    </ul>
  </li>
  <li>
    <h3
      class="headingBottomSpacing heading heading--size-h3"
    >
      Size Medium
    </h3>
    <div
      class="headingBottomSpacing"
    >
      <a
        class="button sizeMedium variantFlat colorBrand"
      >
        Link
      </a>
    </div>
  </li>
  <li>
    <h3
      class="headingBottomSpacing heading heading--size-h3"
    >
      Size Small
    </h3>
    <div
      class="headingBottomSpacing"
    >
      <a
        class="button sizeSmall variantFlat colorBrand"
      >
        Link
      </a>
    </div>
  </li>
</ul>
`;

exports[`<Link /> SecondaryRecommendedVariants story renders snapshot 1`] = `
<ul>
  <li>
    <h3
      class="headingBottomSpacing heading heading--size-h3"
    >
      Size Large
    </h3>
    <ul
      class="grid gap-y-4"
    >
      <li>
        <a
          class="button sizeLarge variantOutline colorBrand"
        >
          Link
        </a>
      </li>
      <li>
        <a
          class="button sizeLarge variantOutline colorBrand"
        >
          <svg
            aria-hidden="true"
            class="icon arrowBackIcon"
            fill="currentColor"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#arrow-back"
            />
          </svg>
           
          Link
        </a>
      </li>
      <li
        class="headingBottomSpacing"
      >
        <a
          class="button sizeLarge variantOutline colorBrand"
        >
          Link
          <svg
            aria-hidden="true"
            class="icon arrowForwardIcon"
            fill="currentColor"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#arrow-forward"
            />
          </svg>
        </a>
      </li>
    </ul>
  </li>
  <li>
    <h3
      class="headingBottomSpacing heading heading--size-h3"
    >
      Size Medium
    </h3>
    <div
      class="headingBottomSpacing"
    >
      <a
        class="button sizeMedium variantOutline colorBrand"
      >
        Link
      </a>
    </div>
  </li>
  <li>
    <h3
      class="headingBottomSpacing heading heading--size-h3"
    >
      Size Small
    </h3>
    <div
      class="headingBottomSpacing"
    >
      <a
        class="button sizeSmall variantOutline colorBrand"
      >
        Link
      </a>
    </div>
  </li>
</ul>
`;

exports[`<Link /> TertiaryRecommendedVariants story renders snapshot 1`] = `
<ul>
  <li>
    <h3
      class="headingBottomSpacing heading heading--size-h3"
    >
      Size Large
    </h3>
    <ul
      class="grid gap-y-4"
    >
      <li>
        <a
          class="button sizeLarge variantOutline colorNeutral"
        >
          Link
        </a>
      </li>
      <li>
        <a
          class="button sizeLarge variantOutline colorNeutral"
        >
          <svg
            aria-hidden="true"
            class="icon arrowBackIcon"
            fill="currentColor"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#arrow-back"
            />
          </svg>
           
          Link
        </a>
      </li>
      <li
        class="headingBottomSpacing"
      >
        <a
          class="button sizeLarge variantOutline colorNeutral"
        >
          Link
          <svg
            aria-hidden="true"
            class="icon arrowForwardIcon"
            fill="currentColor"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#arrow-forward"
            />
          </svg>
        </a>
      </li>
    </ul>
  </li>
  <li>
    <h3
      class="headingBottomSpacing heading heading--size-h3"
    >
      Size Medium
    </h3>
    <div
      class="headingBottomSpacing"
    >
      <a
        class="button sizeMedium variantOutline colorNeutral"
      >
        Link
      </a>
    </div>
  </li>
  <li>
    <h3
      class="headingBottomSpacing heading heading--size-h3"
    >
      Size Small
    </h3>
    <div
      class="headingBottomSpacing"
    >
      <a
        class="button sizeSmall variantOutline colorNeutral"
      >
        Link
      </a>
    </div>
  </li>
</ul>
`;

exports[`<Link /> passes class names down properly 1`] = `
<a
  class="exampleClassName button variantLink colorBrand"
  color="brand"
  data-testid="example-class-name"
  href="https://go.czi.team/eds"
>
  Link
</a>
`;

exports[`<Link /> passes test ids down properly 1`] = `
<a
  class="button variantLink colorBrand"
  color="brand"
  data-testid="example-test-id"
  href="https://go.czi.team/eds"
>
  Link
</a>
`;
